<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_manage_room"
        android:icon="@drawable/baseline_house_24"
        android:title="@string/manage_room" />
    <item
        android:id="@+id/nav_book"
        android:icon="@drawable/baseline_book_online_24"
        android:title="@string/book" />
    <item
        android:id="@+id/nav_agent"
        android:icon="@drawable/baseline_people_24"
        android:title="@string/find_agent" />
    <item
        android:id="@+id/nav_rating"
        android:icon="@drawable/baseline_rate_review_24"
        android:title="@string/rating" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings" />
</menu>