<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_find_job"
        android:icon="@drawable/baseline_house_24"
        android:title="@string/find_job" />
    <item
        android:id="@+id/nav_book"
        android:icon="@drawable/baseline_book_online_24"
        android:title="@string/handle_book" />
    <item
        android:id="@+id/nav_salary"
        android:icon="@drawable/baseline_attach_money_24"
        android:title="@string/salary" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings" />
</menu>